--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>ÍNDICE PRÁCTICAS TPED1</h1>
     <h2>Marta González 3ºDG B</h2>
-    <a href="el_pais/ElPais.html">El País</a>
+    <ul>
+        <li><a href="el_pais/ElPais.html" target="_blank">El País</a></li>
+    <li><a href="galeria_imagenes_inicial/index.html" target="_blank">Galería de imágenes inicial</a></li>
+</ul>
 </body>
 </html>
