--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Prácticas de TPED1</title>
+    <link rel="stylesheet" href="estilo.css" />
 </head>
+
 <body>
-    <h1>ÍNDICE PRÁCTICAS TPED1</h1>
-    <h2>Marta González 3ºDG B</h2>
-    <ul>
-        <li><a href="el_pais/ElPais.html" target="_blank">El País</a></li>
-    <li><a href="galeria_imagenes_inicial/index.html" target="_blank">Galería de imágenes inicial</a></li>
-</ul>
+    <header>
+        <h1>ÍNDICE PRÁCTICAS TPED1</h1>
+        <h2>Marta González 3ºDG B</h2>
+    </header>
+    <section id="ContenedorFlex">
+        <div class="ElementoFlex">
+            <a href="el_pais/ElPais.html">
+                El país
+            </a>
+        </div>
+
+        <div class="ElementoFlex">
+            <a href="galeria_imagenes_inicial/index.html">
+                Galería
+            </a>
+        </div>
+
+        <div class="ElementoFlex">
+            <a href="el_pais/ElPais.html">
+            Galeria Flex
+            </a>
+        </div>
+
+        <div class="ElementoFlex">
+            <a href="el_pais/ElPais.html">
+            Enlace
+            </a>
+        </div>
+
+    </section>
 </body>
+
 </html>
