--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
 
         <div class="ElementoFlex">
-            <a href="el_pais/ElPais.html">
-            Enlace
+            <a href="sesion16_prueba_examen/index.html">
+            Adobe
             </a>
         </div>
 
