--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             </a>
         </div>
 
+        <div class="ElementoFlex">
+            <a href="examen_parcial/index.html">
+            Examen parcial
+            </a>
+        </div>
+
     </section>
 </body>
 
