--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <section id="ContenedorFlex">
         <div class="ElementoFlex">
-            <a href="el_pais/ElPais.html">
+            <a href="elpais/index.html">
                 El país
             </a>
         </div>
