--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="ElementoFlex">
-            <a href="el_pais/ElPais.html">
+            <a href="galeria_flex/index.html">
             Galeria Flex
             </a>
         </div>
