--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             </a>
         </div>
 
+        <div class="ElementoFlex">
+            <a href="casting_tipografia/index.html">
+            Casting Tipográfico
+            </a>
+        </div>
+
     </section>
 </body>
 
