--- a/casting_tipografia/index.html
+++ b/casting_tipografia/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Galería de imágenes</title>
+    <title>Casting Tipográfico</title>
     <link rel="stylesheet" href="estilo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
