--- a/casting_tipografia/index.html
+++ b/casting_tipografia/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Casting Tipográfico</title>
+    <title>Casting tipográfico</title>
     <link rel="stylesheet" href="estilo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=DM+Mono:wght@300&family=DM+Serif+Display&family=Josefin+Sans:wght@100&family=Lobster&family=Red+Hat+Display:wght@300&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a0f44cee29.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         </div>
 
         <div class="elementoflex2">
-            <h1>DM Serif Display</h1>
+            <h1>DM Serif Display <i class="fas fa-cat" style="font-size:24px;"></i></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p>
@@ -51,7 +52,7 @@
         </div>
 
         <div class="elementoflex6">
-            <h1>Josefin Sans</h1>
+            <h1>Josefin Sans <i class="fa fa-heart" style="font-size: 20px;color:red;"></i></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
@@ -59,7 +60,7 @@
         </div>
 
         <div class="elementoflex7">
-            <h1>Meditative</h1>
+            <h1>Meditative <i class="fa fa-cloud" style="font-size:20px;color:lightblue;"></i></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
