--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             </a>
         </div>
 
+        <div class="ElementoFlex">
+            <a href="sesion22_bootstrap/index.html">
+            Bootstrap
+            </a>
+        </div>
+
     </section>
 </body>
 
