--- a/galeria_flex/index.html
+++ b/galeria_flex/index.html
@@ -15,16 +15,16 @@
 </header>
 <section class="galeria">
     <div class="elementoflex" >
-        <a href="#" target="_blank">
+        <a href="imagen1.html" target="_blank">
            <img 
              alt="Alhambra vista desde el barrio de Albaicín"
              title="Alhambra"
-             src="imagenes/vistas.JPG"
+             src="imagenes/IMG_1843.jpg"
            />
          </a>
    </div>
    <div class="elementoflex">
-       <a href="#" target="_blank">
+       <a href="imagen2.html" target="_blank">
            <img 
              alt="Fotografía a través de un arco"
              title="Arco"
@@ -32,8 +32,8 @@
            />
          </a>
    </div>
-   <div class="elementoflex" style="flex-grow: 0.2">
-       <a href="#" target="_blank">
+   <div class="elementoflex">
+       <a href="imagen3.html" target="_blank">
            <img 
              alt="Imagen del nacimiento de estrellas"
              title="Mosaico"
@@ -42,7 +42,7 @@
          </a>
    </div>
    <div class="elementoflex">
-       <a href="#" target="_blank">
+       <a href="imagen4.html" target="_blank">
            <img 
              alt="Imagen del nacimiento de estrellas"
              title="Palacios Nazaríes"
@@ -51,7 +51,7 @@
          </a>
    </div>
    <div class="elementoflex">
-       <a href="#" target="_blank">
+       <a href="imagen5.html" target="_blank">
            <img 
              alt="Imagen del nacimiento de estrellas"
              title="Palacios Nazaríes 2"
@@ -59,8 +59,8 @@
            />
          </a>
    </div>
-   <div class="elementoflex" style="flex-grow: 3">
-       <a href="#" target="_blank">
+   <div class="elementoflex">
+       <a href="imagen6.html" target="_blank">
            <img 
              alt="Imagen del nacimiento de estrellas"
              title="Jardín"
@@ -69,7 +69,7 @@
          </a>
    </div>
    <div class="elementoflex">
-       <a href="#" target="_blank">
+       <a href="imagen7.html" target="_blank">
            <img 
              alt=""
              title="Generalife"
@@ -87,7 +87,7 @@
          </a>
    </div>
    <div class="elementoflex">
-       <a href="#" target="_blank">
+       <a href="imagen9.html" target="_blank">
            <img 
              alt="Imagen del nacimiento de estrellas"
              title="Paseo"
