--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
             </a>
         </div>
 
+        <div class="ElementoFlex">
+            <a href="web_personal/index.html">
+            Web personal
+            </a>
+        </div>
+
     </section>
 </body>
 
